<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="title_characters">Characters</string>
    <string name="title_locations">Locations</string>
    <string name="title_episodes">Episodes</string>
    <string name="character_image">Character image</string>
    <string name="character_species">&lt;b>Species:&lt;/b> %s</string>
    <string name="character_status">&lt;b>Status:&lt;/b> %s</string>
    <string name="character_type">&lt;b>Type:&lt;/b> %s</string>
    <string name="character_type_standard"><b>Type:</b> Standard</string>
    <string name="character_gender">&lt;b>Gender:&lt;/b> %s</string>
    <string name="character_origin">&lt;b>Origin:&lt;/b> &lt;u>%s&lt;/u></string>
    <string name="character_location">&lt;b>Current Location:&lt;/b> &lt;u>%s&lt;/u></string>
    <string name="character_appearances"><b>Appearances:</b> </string>
    <string name="location_dimension">&lt;b>Dimension:&lt;/b> %s</string>
    <string name="location_residents"><b>Residents:</b> </string>
    <string name="episode_air_date">&lt;b>Air Date:&lt;/b> %s</string>
    <string name="episode_code">&lt;b>Episode:&lt;/b> %s</string>
    <string name="episode_characters"><b>Characters:</b> </string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="error_text">An unknown error has happened</string>
    <string name="timeout_exception">The server too long to answer, please check your internet connection</string>
    <string name="no_internet_exception">No internet connection</string>
    <string name="no_cached_data">No data is available, please connect to internet first</string>
    <string name="inaccurate_data_no_internet"><small>data may be inaccurate, consider getting internet connection</small></string>
    <string name="none">None </string>
    <string name="no_results">No results</string>
    <string name="search">Search</string>
    <string name="characters_name">Characters Name</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="dimension">Dimension</string>
    <string name="name">Name</string>
</resources>