<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/fragment_horizontal_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/character_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <EditText
            android:id="@+id/character_species_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/species" />

        <EditText
            android:id="@+id/character_type_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <include
            android:id="@+id/recycler_layout"
            layout="@layout/recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>