<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/fragment_horizontal_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/location_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/location_type_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type" />

        <EditText
            android:id="@+id/location_dimension_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dimension" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="search" />

        <include
            android:id="@+id/recycler_layout"
            layout="@layout/recycler_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>