<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characters">

    <fragment
        android:id="@+id/navigation_characters"
        android:name="com.example.rickandmortyapiproject.ui.CharactersFragment"
        android:label="@string/title_characters"
        tools:layout="@layout/fragment_recycler_list" >
        <action
            android:id="@+id/action_navigation_characters_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_locations"
        android:name="com.example.rickandmortyapiproject.ui.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_recycler_list" >
        <action
            android:id="@+id/action_navigation_locations_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_episodes"
        android:name="com.example.rickandmortyapiproject.ui.EpisodesFragment"
        android:label="@string/title_episodes"
        tools:layout="@layout/fragment_recycler_list" >
        <action
            android:id="@+id/action_navigation_episodes_to_episodeDetailsFragment"
            app:destination="@id/episodeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/characterDetailsFragment"
        android:name="com.example.rickandmortyapiproject.ui.CharacterDetailsFragment"
        android:label="fragment_character_details"
        tools:layout="@layout/fragment_character_details" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_characterDetailsFragment_to_episodeDetailsFragment"
            app:destination="@id/episodeDetailsFragment" />
        <action
            android:id="@+id/action_characterDetailsFragment_to_locationDetailsFragment"
            app:destination="@id/locationDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationDetailsFragment"
        android:name="com.example.rickandmortyapiproject.ui.LocationDetailsFragment"
        android:label="fragment_location_details"
        tools:layout="@layout/fragment_location_details" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_locationDetailsFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/episodeDetailsFragment"
        android:name="com.example.rickandmortyapiproject.ui.EpisodeDetailsFragment"
        android:label="fragment_episode_details"
        tools:layout="@layout/fragment_episode_details" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_episodeDetailsFragment_to_characterDetailsFragment"
            app:destination="@id/characterDetailsFragment" />
    </fragment>
</navigation>